k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextjs-app
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nextjs-app
  template:
    metadata:
      labels:
        app: nextjs-app
    spec:
      containers:
        - name: nextjs-app-container
          image: tajul101/nextjs-app
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.2"
          ports:
          - containerPort: 3000
            protocol: TCP
      restartPolicy: Always
