k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nextjs-service
  namespace: default
spec:
  selector:
    app: nextjs-app
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
